<resources>
    <string name="app_name">My Movie</string>
    <string name="movieTitle">Movie Title</string>
    <string name="etMovieTitle">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="etGenre">Enter genre here</string>
    <string name="year">Year</string>
    <string name="etYear">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string-array name="spRatings">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="insert">INSERT</string>
    <string name="showList">SHOW LIST</string>
    <string name="showAll">SHOW ALL</string>
    <string name="movieID">Movie ID</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
</resources>